--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
     stage('Build Image') {
       agent any
       steps {
-      sh 'docker build -t kienapp-${params.ENV}-${env.BRANCH_NAME}:${env.BUILD_ID}'
+      sh 'docker build -t kienapp:v3'
 	    }
 }
 }
