--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
       steps {
         echo "${env.BUILD_ID}"
 	echo "${params.ENV}"
-        echo "${env.BRANCH_NAME}"
+        echo "$GIT_BRANCH"
       }
     }
     stage('Build Image') {
