--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -18,8 +18,11 @@ pipeline {
     stage('Build Image') {
       agent any
       steps {
-      sh 'docker build -t kienapp:${env.BUILD_ID} $GIT_URL'
+		def customImage = docker.build("my-image:${env.BUILD_ID}")
+		customImage.inside {
+        sh 'make test'
 	    }
+
 }
 }
 }
