--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -18,10 +18,7 @@ pipeline {
     stage('Build Image') {
       agent any
       steps {
-		def customImage = docker.build("my-image:${env.BUILD_ID}")
-		customImage.inside {
-        sh 'make test'
-	    }
+	docker.build("testkien", "--build-arg x=y .")
 
 }
 }
